fixed: dark mode padding button

--- a/css/components/darktheme.css
+++ b/css/components/darktheme.css
@@ -14,6 +14,7 @@
 
 .fa-moon {
     color: white;
+    padding-right: 7px;
 }
 
 .fa-sun {
